--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@prisma/client": "^5.19.1",
     "@tanstack/react-query": "^5.56.2",
     "apexcharts": "^3.45.2",
+    "cookie": "^0.6.0",
     "daisyui": "^4.12.10",
     "flatpickr": "^4.6.13",
     "formidable": "^3.5.1",
     "formik": "^2.4.6",
+    "jose": "^5.9.3",
     "jsvectormap": "^1.6.0",
     "next": "^14.2.4",
+    "npm": "^10.8.3",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
