--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@prisma/client": "^5.19.1",
     "@tanstack/react-query": "^5.56.2",
     "apexcharts": "^3.45.2",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "cookie": "^0.6.0",
     "daisyui": "^4.12.10",
     "flatpickr": "^4.6.13",
@@ -24,6 +26,8 @@
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
